--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,7 +1,7 @@
 <p>{{questions[i].id}}</p>
 
 <div>
-
+alert(getRandomInt(i,questions.length));
 <table>
     <tr><td>{{questions[i].text}}</td>
         <td></td>
