--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,7 +1,9 @@
 <p>{{questions[i].id}}</p>
 
 <div>
+    <script>
 alert(getRandomInt(i,questions.length));
+</script>
 <table>
     <tr><td>{{questions[i].text}}</td>
         <td></td>
