--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -12,9 +12,8 @@
 </table>
 
 <div>{{mainAnswer}}</div>
+<div>{{getRandomInt(1,10)}}</div>
 <!--div>{{questions.length}}</div-->
 
 </div>
-<script>
-alert("Привет!");
-</script>
+
