--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -10,7 +10,7 @@
         <td><img ng-src = "{{questions[i].img2.url}}" ng-click = "setAnswer(questions[i].img2.answer,questions)"></td>
     </tr>
 </table>
-<button ng-click ="getRandomInt(1,10)" > ssss </button>
+<button ng-click ="setRandomInt(1,10)" > ssss </button>
 <div>{{mainAnswer}}</div>
 <div>{{randomInt}}</div>
 <!--div>{{questions.length}}</div-->
