--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,13 +1,15 @@
 <p>{{questions[i].id}}</p>
 
-<div>
 
-<table border="10px">
-    <tr><td>{{questions[i].text}}</td>
+<div ng-repeat="(g, question) in questions" ng-show="i == g">
+    
+
+<table>
+    <tr><td>{{question.text}}</td>
         <td></td>
     </tr>
-    <tr><td><img ng-src = "{{questions[i].img1.url}}" ng-click = "setAnswer(questions[i].img1.answer,questions)"></td>
-        <td><img ng-src = "{{questions[i].img2.url}}" ng-click = "setAnswer(questions[i].img2.answer,questions)"></td>
+    <tr><td><img ng-src = "{{question.img1.url}}" ng-click = "setAnswer(question.img1.answer,questions)"></td>
+        <td><img ng-src = "{{question.img2.url}}" ng-click = "setAnswer(question.img2.answer,questions)"></td>
     </tr>
 </table>
 
