--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
   -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular.js"></script>
   <script src="https://code.angularjs.org/1.5.0-rc.0/angular-route.js"></script>
+  <script src="https://code.angularjs.org/1.5.0-rc.0/angular-animate.js"></script>
   <script src="app.js"></script>
   <script src="welcome/welcome.js"></script>
   <script src="view1/view1.js"></script>
