--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,7 +1,7 @@
 
 
 
-<div ng-repeat="(g, question) in questions" ng-hide="i != g">
+<div ng-repeat="(g, question) in questions" ng-hide="i != g" ng-class="hide-animation">
     
 
 <table>
