--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,7 +1,7 @@
 
 
 
-<div ng-repeat="(g, question) in questions" ng-hide="i != g" ng-class=".hide-animation">
+<div ng-repeat="(g, question) in questions" ng-if="i == g" ng-class="view-slide-in">
     
 
 <table>
