--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,7 +1,7 @@
 
 
 
-<div ng-repeat="(g, question) in questions" ng-if="i == g" ng-class="view-slide-in">
+<div ng-repeat="(g, question) in questions" ng-if="i == g" ng-animate="{enter: 'view-slide-in'}">
     
 
 <table>
