--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -9,8 +9,8 @@
     <tr><td>{{questions[i].text}}</td>
         <td></td>
     </tr>
-    <tr><td><img ng-src = "{{questions[i].img1.url}}" ng-click = "setAnswer(questions[i].img1.answer,questions)"></td>
-        <td><img ng-src = "{{questions[i].img2.url}}" ng-click = "setAnswer(questions[i].img2.answer,questions)"></td>
+    <tr><td><img ng-animate = "'highlight'" ng-src = "{{questions[i].img1.url}}" ng-click = "setAnswer(questions[i].img1.answer,questions)"></td>
+        <td><img ng-anumate = "'highlight'" ng-src = "{{questions[i].img2.url}}" ng-click = "setAnswer(questions[i].img2.answer,questions)"></td>
     </tr>
 </table>
 
