--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
   <script data-require="jquery@2.0.1" data-semver="2.0.1" src="http://code.jquery.com/jquery-2.0.1.min.js"></script>
   <script data-require="jqueryui@1.9.2" data-semver="1.9.2" src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
   <script src="https://code.angularjs.org/1.5.0-rc.0/angular-route.js"></script>
-  <script src="https://code.angularjs.org/1.5.0-rc.0/angular-animate.js"></script>
+  <!--script src="https://code.angularjs.org/1.5.0-rc.0/angular-animate.js"></script-->
   <script src="app.js"></script>
   <script src="welcome/welcome.js"></script>
   <script src="view1/view1.js"></script>
