--- a/app/welcome/welcome.html
+++ b/app/welcome/welcome.html
@@ -2,6 +2,9 @@
 <div>
 <a ng-href = "#/view1">Start Game</a>
 </div>
+<div>
+<a ng-href = "#/view1/ver1">Start Game 1</a>
+</div>
 <!-- <p>
   Showing of 'interpolate' filter:
   {{ 'Current version is v%VERSION%.' | interpolate }}
