--- a/app/welcome/welcome.html
+++ b/app/welcome/welcome.html
@@ -3,7 +3,7 @@
 <a ng-href = "#/view1">Start Game</a>
 </div>
 <div>
-<a ng-href = "#/view1/ver1">Start Game 1</a>
+<a ng-href = "#/view1?v=ver1">Start Game 1</a>
 </div>
 <!-- <p>
   Showing of 'interpolate' filter:
