--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,6 +1,6 @@
 
 
- $location.search() = <span ng-bind="$location.search()"></span> <br>
+ $location.search() = {{s}}<br>
 
 <div ng-repeat="(g, quest) in questions" ng-show ="g == i">
 
