--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,6 +1,7 @@
 
 
  $location.search() = {{s}}<br>
+ нужная перменная = {{filters.v}}
 
 <div ng-repeat="(g, quest) in questions" ng-show ="g == i">
 
