--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -2,7 +2,8 @@
 
  $location.search() = {{s}}<br>
  нужная перменная = {{filters.v}}
-
+нужная перменная s.v= {{s.v}}
+нужная перменная s[0]= {{s[0]}}
 <div ng-repeat="(g, quest) in questions" ng-show ="g == i">
 
     
