--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,9 +1,9 @@
 
 
  $location.search() = {{s}}<br>
- нужная перменная = {{filters.v}}
-нужная перменная s.v= {{s.v}}
-нужная перменная s[0]= {{s[0]}}
+ нужная перменная = {{filters.v}}<br>
+нужная перменная s.v= {{s.v}}<br>
+нужная перменная s[0]= {{s[0]}}<br>
 <div ng-repeat="(g, quest) in questions" ng-show ="g == i">
 
     
