--- a/app/welcome/welcome.html
+++ b/app/welcome/welcome.html
@@ -1,9 +1,9 @@
-<p>This is the brand new GAME!!!!</p>
+<p>Игры для малышей и их родителей!</p>
 <div>
-<a ng-href = "#/view1">Start Game</a>
+<a ng-href = "#/view1?v=ver1">Игра "Противоположности" (для детей 1 - 2 лет).</a>
 </div>
 <div>
-<a ng-href = "#/view1?v=ver1">Start Game 1</a>
+<a ng-href = "#/view1?v=ver2">Игра "Противоположности" (для детей 2 - 4 лет).</a>
 </div>
 <!-- <p>
   Showing of 'interpolate' filter:
