--- a/app/welcome/welcome.html
+++ b/app/welcome/welcome.html
@@ -1,5 +1,5 @@
 <div>
-<a ng-href = "#/view1?v=ver1"><h1>Игра "Противоположности" (для детей 1 - 2 лет).</h1></a>
+<a ng-href = "#/view1?v=ver1"><h1 ng-class="f">Игра "Противоположности" (для детей 1 - 2 лет).</h1></a>
 </div>
 <div>
 <a ng-href = "#/view1?v=ver2"><h1>Игра "Противоположности" (для детей 2 - 4 лет).</h1></a>
