--- a/app/welcome/welcome.html
+++ b/app/welcome/welcome.html
@@ -2,9 +2,9 @@
 <a ng-href = "#/view1?v=ver1"><h1 class="f">Игра "Противоположности" (для детей 1 - 2 лет).</h1></a>
 </div>
 <div>
-<a ng-href = "#/view1?v=ver2"><h1>Игра "Противоположности" (для детей 2 - 4 лет).</h1></a>
+<a ng-href = "#/view1?v=ver2"><h1 class="f">Игра "Противоположности" (для детей 2 - 4 лет).</h1></a>
 </div>
-<h1><img ng-src ="img/12.jpg"></h1>
+<h1 class="f"><img ng-src ="img/12.jpg"></h1>
 <!-- <p>
   Showing of 'interpolate' filter:
   {{ 'Current version is v%VERSION%.' | interpolate }}
