геймовер - переход на страницу велкам

--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,5 +1,5 @@
-<p>Game over!</p>
-<a ng-href = "#/view1">Start Game Again</a>
+<h1 class="f">Игра окончена!</h1>
+<a ng-href = "#/welcome"><h1 class="f">Поиграем ещё?</h1></a>
 
 <!-- <p>
   Showing of 'interpolate' filter:
