--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -4,9 +4,9 @@
 
     
 
-<table>
-    <tr><td>{{quest.text}}</td>
-        <td></td>
+<table align="center">
+    <tr><td><h2 font-size ="200%">{{quest.text}}</h2></td>
+        <td>""</td>
     </tr>
     <tr><td><h1 ng-class="{f: quest.fade}"><img  ng-src = "{{quest.img1.url}}" ng-click = "setAnswer(quest.img1.answer,questions)"></h1></td>
         <td><h1 ng-class="{f: quest.fade}"><img  ng-src = "{{quest.img2.url}}" ng-click = "setAnswer(quest.img2.answer,questions)"></h1></td>
