--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -8,8 +8,8 @@
     <tr><td><h2 font-size ="200%" align="center">{{quest.text}}</h2></td>
         <!--td>&nbsp;</td-->
     </tr>
-</table align="center">
-   <table>
+</table>
+   <table align="center">
     <tr><td><h1 ng-class="{f: quest.fade}"><img  ng-src = "{{quest.img1.url}}" ng-click = "setAnswer(quest.img1.answer,questions)"></h1></td>
         <td><h1 ng-class="{f: quest.fade}"><img  ng-src = "{{quest.img2.url}}" ng-click = "setAnswer(quest.img2.answer,questions)"></h1></td>
     </tr>
