игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -1,12 +1,17 @@
 
+<table align="center">
+    <tr><td><img  ng-src = "{{puzzleimg}}" ng-click = "setAnswer()"></td>
+        <td><img  ng-src = "{{puzzleimg}}" ng-click = "setAnswer()"></td>
+    </tr>
+</table>
 
-<div ng-repeat="(g, quest) in questions" ng-show ="g == i">
+<!--<div ng-repeat="(g, quest) in questions" ng-show ="g == i">
 
     
 
 <table align="center">
     <tr><td><h2 font-size ="200%" align="center">{{quest.text}}</h2></td>
-        <!--td>&nbsp;</td-->
+        &lt;!&ndash;td>&nbsp;</td&ndash;&gt;
     </tr>
 </table>
    <table align="center">
@@ -15,8 +20,8 @@
     </tr>
 </table>
 
-<!--div>{{mainAnswer}}</div-->
-<!--div>{{questions.length}}</div-->
+&lt;!&ndash;div>{{mainAnswer}}</div&ndash;&gt;
+&lt;!&ndash;div>{{questions.length}}</div&ndash;&gt;
 
-</div>
+</div>-->
 
