--- a/app/welcome/welcome.html
+++ b/app/welcome/welcome.html
@@ -5,7 +5,7 @@
 <a ng-href = "#/view1?v=ver2"><h1 class="f">Игра "Противоположности" (для детей 2 - 4 лет).</h1></a>
 </div>
 <div>
-    <a ng-href = "#/puzzle?v=ver1"><h1 class="f">Игра "Пазл" (для детей от 4 лет).</h1></a>
+    <a ng-href = "#/puzzle"><h1 class="f">Игра "Пазл" (для детей от 4 лет).</h1></a>
 </div>
 <h1 class="f"><img ng-src ="img/12.jpg"></h1>
 <!-- <p>
