игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -6,8 +6,8 @@
 </table>
 
 <ul>
-    <li ng-repeat="veg in veggies1">
-        {{veg}}
+    <li ng-repeat="veg1 in veggies1">
+        {{veg1}}
     </li>
 </ul>
 
