игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -6,7 +6,8 @@
 </table>
 
 <ul>
-    <li ng-repeat="veg1 in veggies1">
+    <li ng-repeat="veg1 in veggies1" class = "item" background-image = "img/12.jpg"
+    >
         {{veg1}}
     </li>
 </ul>
