игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -6,8 +6,7 @@
 </table>
 
 <ul>
-    <li ng-repeat="veg1 in veggies1" class = "item" background-image = "img/12.jpg"
-    >
+    <li ng-repeat="veg1 in veggies1" ng-style="{'width': 400/gridSize, 'height': 400/gridSize}">
         {{veg1}}
     </li>
 </ul>
