--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -6,7 +6,7 @@
 </table>
 
 <ul>
-    <li ng-repeat="veg1 in veggies1" ng-style="{'width': 400/gridSize, 'height': 400/gridSize}">
+    <li ng-repeat="veg1 in veggies1" ng-style="{'height': 400/gridSize}">
         {{veg1}}
     </li>
 </ul>
