игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -5,6 +5,8 @@
     </tr>
 </table>
 
+<div greet></div>
+
 <ul>
     <li ng-repeat="veg1 in veggies1" ng-style="{'height': 400/gridSize}">
         {{veg1}}
