игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -5,10 +5,9 @@
     </tr>
 </table>
 
-<div greet></div>
 
 <ul>
-    <li ng-repeat="veg1 in veggies1" ng-style="{'height': 400/gridSize}">
+    <li ng-repeat="veg1 in veggies1" ng-style="myStyle">
         {{veg1}}
     </li>
 </ul>
