--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -7,7 +7,7 @@
 
 
 <ul>
-    <li ng-repeat="veg1 in veggies1">
+    <li ng-repeat="veg1 in veggies1" ng-style = "myStyle">
         {{veg1}}
     </li>
 </ul>
