игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -5,7 +5,9 @@
     </tr>
 </table>
 
-
+<ul>
+<li class="mini">12345 вышел зайчик погулять</li>
+</ul>
 <ul>
     <li ng-repeat="veg1 in veggies1" ng-style = "myStyle">
         {{veg1}}
