--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,11 @@
         transition: 2s;
         opacity: 1;
       }
-
+      li.mini {
+        wight: 100px;
+        height: 100px;
+        background-image": url('img/12.jpg');
+      }
 
     </style>
 </head>
