игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -6,7 +6,7 @@
 </table>
 
 <ul>
-<li class="mini">12345 вышел зайчик погулять</li>
+<li>12345 вышел зайчик погулять</li>
 </ul>
 <ul>
     <li ng-repeat="veg1 in veggies1" ng-style = "myStyle">
