--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,38 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+  <script>
+    angular.module('compileExample', [], function($compileProvider) {
+              // configure new 'compile' directive by passing a directive
+              // factory function. The factory function injects the '$compile'
+              $compileProvider.directive('compile', function($compile) {
+                // directive factory creates a link function
+                return function(scope, element, attrs) {
+                  scope.$watch(
+                          function(scope) {
+                            // watch the 'compile' expression for changes
+                            return scope.$eval(attrs.compile);
+                          },
+                          function(value) {
+                            // when the 'compile' expression changes
+                            // assign it into the current DOM
+                            element.html(value);
+
+                            // compile the new DOM and link it to the current
+                            // scope.
+                            // NOTE: we only compile .childNodes so that
+                            // we don't get into infinite loop compiling ourselves
+                            $compile(element.contents())(scope);
+                          }
+                  );
+                };
+              });
+            })
+            .controller('GreeterController', ['$scope', function($scope) {
+              $scope.name = 'Angular';
+              $scope.html = 'Hello {{name}}';
+            }]);
+  </script>
     <style>
       h1 {
         font-size: 400%;
