--- a/app/welcome/welcome.html
+++ b/app/welcome/welcome.html
@@ -1,3 +1,9 @@
+<div ng-controller="GreeterController">
+    <input ng-model="name"> <br/>
+    <textarea ng-model="html"></textarea> <br/>
+    <div compile="html"></div>
+</div>
+
 <div>
 <a ng-href = "#/view1?v=ver1"><h1 class="f">Игра "Противоположности" (для детей 1 - 2 лет).</h1></a>
 </div>
