--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -12,7 +12,7 @@
 </ul>
 <ul>
     <li ng-repeat="veg1 in veggies1" ng-style = "myStyle">
-        {{veg1}}
+        {{veg1.number}}
     </li>
 </ul>
 
