--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -4,9 +4,10 @@
         <td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
     </tr>
 </table>
-<!--{{ message }}
+
+{{ message }}
 <div otc-dynamic></div>
--->
+
 <ul>
 <li>12345 вышел зайчик погулять</li>
 </ul>
