--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -13,7 +13,7 @@
 </ul>
 <ul>
     <li ng-repeat="veg1 in veggies1" ng-style = "myStyle">
-        {{veg1.number}}
+         <div otc-dynamic="{{veg1.number}}"></div> 
     </li>
 </ul>
 
