игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -11,11 +11,11 @@
 <ul>
 <li>12345 вышел зайчик погулять</li>
 </ul>
-<ul>
-    <li ng-repeat="veg1 in veggies1" ng-style = "myStyle">
+<!--ul>
+    <li ng-repeat="veg1 in veggies1" ng-style = "myStyle"-->
          <div otc-dynamic></div> 
-    </li>
-</ul>
+    <!--/li>
+</ul-->
 
 <!--<div ng-repeat="(g, quest) in questions" ng-show ="g == i">
 
