--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -4,6 +4,14 @@
         <td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
     </tr>
 </table>
+ 
+ <select name="menu" size="1" ng-model="gridSize">
+ <option selected="selected" value="3">3</option>
+ <option  value="4">4</option>
+ <option value="6">6</option>
+ </select>
+ {{gridSize}}
+ 
 
 <!--ul>
     <li ng-repeat="veg1 in veggies1" ng-style = "myStyle"-->
