--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -6,7 +6,7 @@
 </table>
  
  <select name="menu" size="1" ng-model="gridSize">
- <option selected="selected" value="3">3</option>
+ <option selected value="3">3</option>
  <option  value="4">4</option>
  <option value="6">6</option>
  </select>
