игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -1,10 +1,14 @@
 {{puzzleimg}}
+
+<div style="border-width:3px; border-color:blue; padding:4px"> ПРИВЕТ БУКЕТ!</div>
+
 <table align="center">
     <tr><td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
         <td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
     </tr>
 </table>
- 
+
+
  <select name="menu" size="1" ng-model="gridSize">
  <option selected value="3">3</option>
  <option  value="4">4</option>
