игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -1,6 +1,6 @@
 {{puzzleimg}}
 
-<div style="border-width:3px; border-color:blue; padding:4px"> ПРИВЕТ БУКЕТ!</div>
+<div > ПРИВЕТ БУКЕТ!</div>
 
 <table align="center">
     <tr><td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
