игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -1,4 +1,5 @@
 {{puzzleimg}}
+<div style="border-width:3px; border-color:blue; padding:4px">Привет букет</div>;
 <table align="center">
     <tr><td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
         <td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
