--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -1,5 +1,5 @@
 {{puzzleimg}}
-<div style="border-width:3px; border-color:blue; padding:4px">Привет букет</div>;
+<div style="position:absolute; left:0px; top:0px;font-family:Verdana; font-size:10pt;border-style:groove; border-width:30px; border-color:blue; padding:4px">Привет букет</div>;
 <table align="center">
     <tr><td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
         <td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
