игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -1,10 +1,10 @@
 {{puzzleimg}}
-<div style="position:absolute; left:0px; top:0px;font-family:Verdana; font-size:10pt;border-style:groove; border-width:30px; border-color:blue; padding:4px">Привет букет</div>;
-<table align="center">
+<div style="background-image:url({{puzzleimg}});position:absolute; left:0px; top:0px;font-family:Verdana; font-size:10pt;border-style:groove; border-width:30px; border-color:blue; padding:4px">Привет букет</div>;
+<!--table align="center">
     <tr><td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
         <td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
     </tr>
-</table>
+</table-->
 
 
  <select name="menu" size="1" ng-model="gridSize">
