--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -1,5 +1,5 @@
 {{puzzleimg}}
-<div style="background-image:url(puzzleimg);position:absolute; left:0px; top:0px;font-family:Verdana; font-size:10pt;border-style:groove; border-width:30px; border-color:blue; padding:4px">Привет букет</div>;
+<li style="background-image:url('img/12.jpg'); width:100px; height:100px">Привет букет</>;
 <!--table align="center">
     <tr><td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
         <td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
