игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -1,5 +1,5 @@
 {{puzzleimg}}
-<li style="background-image:url('img/12.jpg'); width:100px; height:100px">Привет букет</>;
+<!--li style="background-image:url('img/12.jpg'); width:100px; height:100px">Привет букет</-->;
 <!--table align="center">
     <tr><td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
         <td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
@@ -17,7 +17,7 @@
 
 <!--ul>
     <li ng-repeat="veg1 in veggies1" ng-style = "myStyle"-->
-         <div otc-dynamic></div> 
+         <div otc-dynamic></div>
     <!--/li>
 </ul-->
 
