--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -17,7 +17,7 @@
 
 <!--ul>
     <li ng-repeat="veg1 in veggies1" ng-style = "myStyle"-->
-         <div otc-dynamic some-attr="hello"></div>
+         <div otc-dynamic puzzle-img1 = 'puzzleImg' cell-size1='cellSize' bg-size1='bgSize'></div>
     <!--/li>
 </ul-->
 
