--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -18,6 +18,7 @@
 <!--ul>
     <li ng-repeat="veg1 in veggies1" ng-style = "myStyle"-->
          <div otc-dynamic grid-size1='gridSize' puzzle-img1 = 'puzzleimg' cell-size1='cellSize' bg-size1='bgSize'></div>
+{{gridSize1}}{{puzzleimg1}}{{cellSize1}}{{bgSize1}}
     <!--/li>
 </ul-->
 
