игра пазл - просто две картинки

--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -17,8 +17,8 @@
 
 <!--ul>
     <li ng-repeat="veg1 in veggies1" ng-style = "myStyle"-->
-         <div otc-dynamic grid-size1='gridSize' puzzle-img1 = 'puzzleimg' cell-size1='cellSize' bg-size1='bgSize'></div>
-{{gridSize1}}{{puzzleimg1}}{{cellSize1}}{{bgSize1}}
+         <div otc-dynamic grid-size='gridSize' puzzle-img = 'puzzleimg' cell-size='cellSize' bg-size='bgSize'></div>
+{{gridSize}}{{puzzleimg}}{{cellSize}}{{bgSize}}
     <!--/li>
 </ul-->
 
