--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -17,7 +17,7 @@
 
 <!--ul>
     <li ng-repeat="veg1 in veggies1" ng-style = "myStyle"-->
-         <div otc-dynamic grid-size='gridSize' puzzle-img = 'puzzleimg' cell-size='cellSize' bg-size='bgSize'></div>
+         <div otc-dynamic></div>
 {{gridSize}}{{puzzleimg}}{{cellSize}}{{bgSize}}
     <!--/li>
 </ul-->
