--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -1,5 +1,5 @@
 {{puzzleimg}}
-<li style="background-image:url({{puzzleimg}}); width:100px; height:100px;background-position:{{xpos(4,3)}}% 50%">Привет букет</li>
+<li style="background-image:url({{puzzleimg}}); width:100px; height:100px;background-position:{{xpos(4,3)}}% {{ypos(4,3)}}%">Привет букет</li>
 <!--table align="center">
     <tr><td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
         <td><img  ng-src = "{{puzzleimg}}" ng-click = "setImage(3)"></td>
