--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -17,7 +17,7 @@
 
 <!--ul>
     <li ng-repeat="veg1 in veggies1" ng-style = "myStyle"-->
-         <div otc-dynamic></div>
+         <div otc-dynamic({{gridSize}})></div>
 xpos = {{xpos(5,3)}}      ypos = {{ypos(5,3)}}         
 {{gridSize}}{{puzzleimg}}{{cellSize}}{{bgSize}}
     <!--/li>
