--- a/app/puzzle/puzzle.html
+++ b/app/puzzle/puzzle.html
@@ -13,11 +13,15 @@
  <option value="6">6</option>
  </select>
  {{gridSize}}
- 
-
+<div> 
+    <input ng-model="gridSize">
+    <span otc-dynamic="gridSize"></span>
+</div>
 <!--ul>
     <li ng-repeat="veg1 in veggies1" ng-style = "myStyle"-->
-         <div otc-dynamic="gridSize"></div>
+         
+         <!--div otc-dynamic="gridSize"></div-->
+         
 xpos = {{xpos(5,3)}}      ypos = {{ypos(5,3)}}         
 {{gridSize}}{{puzzleimg}}{{cellSize}}{{bgSize}}
     <!--/li>
